--- a/Unity/Tygra/Tygra.csproj
+++ b/Unity/Tygra/Tygra.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\OrbitCamera.cs" />
     <Compile Include="Assets\RelativeMovement.cs" />
     <Compile Include="Assets\RotateCoin.cs" />
+    <Compile Include="Assets\ThundertankDriving.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
