Add collectable coins
Using kinematic rigid body and a simple script to allow coins to be collected.

--- a/Unity/Tygra/Tygra.csproj
+++ b/Unity/Tygra/Tygra.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CollectCoin.cs" />
     <Compile Include="Assets\ControlRoomButton.cs" />
     <Compile Include="Assets\LiftMovement.cs" />
     <Compile Include="Assets\OrbitCamera.cs" />
