--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Assets/3d/output/Tygra@Jumping Over Into Combat.fbx
 Assets/3d/output/Tygra@Right Turn.fbx
 Assets/3d/output/Tygra@Left Turn.fbx
 Assets/3d/source/catslair.blend1
+build/
+Unity/Tygra/Library/il2cpp_cache/
+Unity/Tygra/Library/ShaderCache/
+Unity/Tygra/Library/webgl_cache/
